--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,6 +9,8 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
+/* Header */
+
 header{
     background-color: black;
     height: 45px;
@@ -21,5 +23,11 @@ header img{
     position: absolute;
     right: 20px;
     bottom:12px;
-    
+}
+
+/* Navbar */
+
+
+#nav .navbar .navbar-expand-lg .navbar-light .bg-light {
+    width: 25px;
 }
